# vigilant-invention

./: .gitignore  .gitmodules  README.md
ChargeController/ChargeController/: ChargeControllerMainBoard-v2.brd  ChargeControllerMainBoard-v2.sch  ChargeControllerMainBoard.brd  ChargeControllerMainBoard.sch  eagle.epf
ChargeController/Firmware/: .gitignore  ChargeController.sln  platformio.ini  platformio.vcxproj  platformio.vcxproj.filters  serialmon.cmd
ChristmasLightsTimer/: clt.sch  eagle.epf
ChristmasLightsTimer/CLT/: CLT-cache.lib  CLT.kicad_pcb  CLT.kicad_pcb-bak  CLT.pro  CLT.sch  CLT.sch-bak
ChristmasLightsTimer/CLT.X/: 12F1840.mc3  main.c
ChristmasLightsTimerV2/: .gitignore
ChristmasLightsTimerV2/ChristmasLightsTimerV2.X/: ChristmasLightsTimerV2.mc3  main.c
ESPControlCenter/: .gitignore  README.md  platformio.ini
ESPControlCenter/rpi-playground/: CMakeLists.txt  main.cpp
ESPControlCenter/rpi-playground/src/: main.cpp  screen.h  screen_nas_stats.h  ui.cpp  ui.h  ui_utils.cpp  ui_utils.h
ESPControlCenter/rpi-playground/src/screens/: air_conditioner.cpp  air_conditioner.h  nas_stats.cpp  nas_stats.h  screen_nas_stats.cpp  screen_nas_stats.h
ESPControlCenter/schematics/: .gitignore  eagle.epf  espoled.brd  espoled.sch
ESPControlCenter/src/: main.cpp
ESPControlCenter/ui/: .gitignore  espremote_screens.xcf  propeller.xcf  pxplus-vga8-16.bdf  pxplus-vga8-32-stripped.bdf  pxplus-vga8-32.bdf  pxplus-vga8-32.c  pxplus-vga8-32.cmd
Eagle/: Farnell-Microchip-PIC16F1825-I_SL.lbr  diodes-inc-e14.lbr  opto-VO610A.lbr  optocoupler-3-jcn.lbr  regulators-linear.lbr  screw-terminal.lbr  stm32f0.lbr
FlowerGuard.X/: PIC16F1825.mc3  main.c  ssd1306.c  ssd1306.h  text.c  text.h
FlowerGuard.X/mcc_generated_files/: adc.c  adc.h  device_config.c  device_config.h  epwm1.c  epwm1.h  i2c_driver.c  i2c_driver.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  memory.c  memory.h  pin_manager.c  pin_manager.h  tmr1.c  tmr1.h  tmr2.c  tmr2.h
FlowerGuard.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
ShutterMotorController/: .gitignore  README.md
ShutterMotorController/firmware/: .gitignore  platformio.ini
ShutterMotorController/schematics/: .gitignore  eagle.epf  main.brd  main.sch
ShutterMotorControllerHub/: .cproject  Debug_STM32F407VG_RAM.ld  f4disco-enc28j60-lwip.ioc
ShutterMotorControllerHub/ENC28J60/: enc28j60.c
ShutterMotorControllerHub/Inc/: main.h  stm32f4xx_it.h
ShutterMotorControllerHub/Src/: lwip.c  main.c  stm32f4xx_hal_msp.c
ShutterMotorControllerHub/proto-f4disco/: .cproject  .mxproject  .project  Release_STM32F407VG_RAM.ld
ShutterMotorControllerHub/proto-smrhubtest/: .cproject  .project  stm32f4_ram.ld
ShutterMotorControllerHub/smch-rpi-qt/: DiagTerminal.cpp  DiagTerminal.h  Hub.cpp  Hub.h  Hub2.cpp  Hub2.h  HubLegacy.cpp  IHub.h  IRadio.h  IRemoteControl.h  OperationQueue.h  PrivateConfig.h  Radio.cpp  Radio.h  ScheduleDetails.h  Utils.h  main.cpp  nrf24.c  nrf24.h  radio_protocol.c  smch-rpi-qt.pro
ShutterMotorRemoteReceiver/: ShopCart.csv  order.xlsx
ShutterMotorRemoteReceiver/Bootloader-STM32/: .cproject  .mxproject  .project  Bootloader-STM32.elf.launch  Bootloader-STM32.ioc  STM32F030K6_FLASH.ld
ShutterMotorRemoteReceiver/Firmware-STM32/: .cproject  .mxproject  .project  Firmware-STM32.ioc  STM32F030K6_FLASH.ld  mx.scratch
ShutterMotorRemoteReceiver/Firmware.X/: MyConfig.mc3  main.c  opto.c  opto.h  radio.c  radio.h
ShutterMotorRemoteReceiver/doc/: ShutterMotorRemoteReceiver.xml
ShutterMotorRemoteReceiver/proto-smrr-f103-mx/: .cproject  .mxproject  .project  Debug_STM32F103CB_RAM.ld  Release_STM32F103CB_FLASH.ld  Release_STM32F103CB_RAM.ld  SMRR_F103_MX Debug.launch  SMRR_F103_MX.ioc  SMRR_F103_MX.txt  mx.scratch
TeveclubAutomator/: TeveclubAutomator.sln
TeveclubAutomator/TeveclubAutomator/: Actions.cpp  Actions.h  Configuration.cpp  Configuration.h  GamePage.cpp  GamePage.h  IConfiguration.h  ITeveclubService.h  MainPage.cpp  MainPage.h  TeachingPage.cpp  TeachingPage.h  TeveclubAutomator.pri  TeveclubAutomator.pro  TeveclubAutomator.vcxproj  TeveclubAutomator.vcxproj.filters  TeveclubService.cpp  TeveclubService.h  main.cpp
TouchScreenTest/: .cproject  .mxproject  .project  LCD240160Test.elf.launch  LCD240160Test.gpdsc  LCD240160Test.ioc  STM32F103CB_RAM.ld
TouchScreenTest/Inc/: graphics.h  lcd.h  lcdconfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  touchpad.h  tpfilter.h
TouchScreenTest/Src/: graphics.c  lcd.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  touchpad.c  tpfilter.c
TouchScreenTest/UI/: Event.h  (+11 more)
pic-snowfall.X/: graphics.c  graphics.h  main.c  pic-snowfall.mc3  sh1106.c  sh1106.h  snowfall.c  snowfall.h
pico-bufferless-oled/: CMakeLists.txt  drawing.c  drawing.h  main.c  multithermo.c  ssd1306.c  test_bitmap.c  widget.c  widget.h  widget_font.c  widget_font.h  widget_text.c  widget_text.h
pico-oled-widgets/: CMakeLists.txt  Display.h  Driver_SH1106.h  Driver_SSD1306.h  I2cAdapter.h  Painter.cpp  Painter.h  Widget.cpp  Widget.h  main.cpp
pico-snowfall/: CMakeLists.txt  Display.h  Driver_SH1106.cpp  Driver_SH1106.h  Driver_SSD1306.cpp  Driver_SSD1306.h  main.cpp  ssd1306.h
(+336 files in other folders)
